deployment/overlays/prod/namespace-patch.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    app: publish
  name: bomc-publish-prod
