deployment/overlays/prod/namespace-prod.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: bomc-publish-prod
  labels:
    name: bomc-publish
