deployment/overlays/prod/init-container-wait-for-consumer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
  namespace: OVERRIDE_BY_OVERLAYS
spec:
  template:
    spec:
