deployment/overlays/prod/wait-for-consumer-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: publisher
  namespace: bomc-rename-namespace
spec:
  template:
    spec:
