deployment/overlays/prod/ingress-host.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: publish-ingress
spec:
  rules:
    - host: bomc.ingress.org
